# OctaCrypt

./: .gitignore  LICENSE  README.md  prodkey_private.pem  prodkey_public.pem  prueba.txt  prueba.txt.enc  prueba.txt.henc  pyproject.toml  signkey_private.pem  signkey_public.pem
octacrypt/: __init__.py
octacrypt/algorithms/: aes.py  aes_cipher.py  chacha.py  hybrid.py  signer.py  xor.py
octacrypt/cli/: __init__.py  __main__.py  cli.py  decrypt.py  encrypt.py  hash.py  hybrid.py  keygen.py  main.py  message.py  sign.py
octacrypt/core/: __init__.py  asym_key_manager.py  crypto.py  crypto_engine.py  key_manager.py  messenger.py
octacrypt/tui/: tui.py
octacrypt/utils/: hash.py  kdf.py  keygen.py  logger.py  symmetryc.py
tests/: __init__.py  test_basic.py  test_crypto_engine.py  test_crypto_engine_invalid.py  test_empty_key.py  test_encrypt_empty_data.py  test_hybrid.py  test_keygen_password.py  test_large_data.py  test_messenger.py  test_signer.py
