[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octacrypt"
version = "0.2.0"
description = "Maximum-grade cryptographic CLI toolkit by Octagram"
authors = [{ name = "Octagram" }]
requires-python = ">=3.10"

dependencies = [
    "cryptography",
    "click",
    "bcrypt",
    "rich",
    "questionary",
]

[project.scripts]
octacrypt     = "octacrypt.cli.cli:cli"
octacrypt-tui = "octacrypt.tui.tui:main"
